--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
 body {
-    background: blue;
+    margin: 0;
+    background-color: blueviolet;
+    background-image: url(peach-cat-kiss.gif);
+}
+.hero {
+    background-image: url(Hearts\ pattern.jpg);
+    text-align: center;
+    color: magenta;
+    font-family: cursive;
+    font-size: larger;
+    text-shadow: #FC0 1px 0 10px;
+}
+h2 {
+    color: royalblue;
+    text-align:center;
+    text-shadow: magenta 1px 0 10px;
+} 
+.img-binx-1 {
+    width: 300px
+}
+.img-binx-2 {
+    width: 300px
 }
