--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 body {
-    margin: 0;
-    background-color: blueviolet;
-    background-image: url(peach-cat-kiss.gif);
+    background-color: white;
 }
 .hero {
-    background-image: url(Hearts\ pattern.jpg);
     text-align: center;
     color: magenta;
     font-family: cursive;
@@ -16,9 +13,3 @@ h2 {
     text-align:center;
     text-shadow: magenta 1px 0 10px;
 } 
-.img-binx-1 {
-    width: 300px
-}
-.img-binx-2 {
-    width: 300px
-}
