added more photos and cleaned up some css

--- a/style.css
+++ b/style.css
@@ -17,17 +17,6 @@ h2 {
     text-shadow: magenta 1px 0 10px;    
 }
 
-.img-Binx-1 {
-    width: 300px;
-}
-
-.img-Binx-2 {
-    width: 300px;
-}
-.img-Beauty-and-the-Beast {
-    width: 300px;
-}
-
-.img-Clearly-a-Trap {
+.img-Binx {
     width: 300px;
 }
